Completed the stochastic layer

--- a/APIC_Net.ipynb
+++ b/APIC_Net.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,10 +285,10 @@
     "                                 + self.inv_softplus(torch.tensor(self.beta)) + \n",
     "                                 torch.rand(self.out_features,1)*self.eps)\n",
     "        \n",
-    "        self.euler_constant = -torch.digamma(torch.tensor(1.0))\n",
     "        \n",
     "        # Gumbel Bernoulli\n",
-    "        self.phi = nn.Parameter(torch.randn((self.in_features + 1),self.out_features)*self.eps)\n",
+    "        self.phi = nn.Parameter(torch.randn(self.in_features,self.out_features)*self.eps)\n",
+    "        self.bias_phi = nn.Parameter(torch.randn(self.out_features, 1)*self.eps)\n",
     "        self.temperature = torch.zeros(self.out_features, 1) + 10\n",
     "        self.t_prior = 0.1 # prior temperature\n",
     "        \n",
@@ -327,8 +327,7 @@
     "        eps = torch.rand_like(s)\n",
     "        a = eps.mul(s).add_(mu)\n",
     "        \n",
-    "        x_cat = torch.cat((x, torch.ones(N).view(N,-1)), 1).view(N,D+1) # N x D+1 \n",
-    "        inter_z = torch.mm(x_cat, self.phi[:,:k]) # N x k\n",
+    "        inter_z = torch.mm(x, self.phi[:,:k]) + self.phi_bias[:k,:].view(-1,k) # N x k\n",
     "    \n",
     "        ################## Reparameterized gumbel kumaraswamy part........\n",
     "        G1 = torch.distributions.uniform.Uniform(self.eps, \n",
@@ -362,15 +361,89 @@
     "        if(not store_KL):    \n",
     "            return code \n",
     "        \n",
-    "#         '''The forward pass of model is complete we just need KL divergences now...'''\n",
-    "#         ################### Calculation of KL divergence for this layer with priors.....\n",
-    "#         curr_K = self.curr_out\n",
+    "        ################################################################################\n",
+    "        \n",
+    "        #        This layer code is written by \"Abhishek Kumar\" github : scakc         #\n",
+    "        \n",
+    "        ################################################################################\n",
+    "        ####### Calculation of KL divergence for this layer with priors.....\n",
+    "        curr_K = self.curr_out\n",
+    "        eps = self.eps\n",
     "        \n",
     "        \n",
-    "        # gi : alpha, py : nu\n",
+    "        # KL Gauss\n",
+    "        KL_gauss = (-0.5*(1 + log_var - mu.pow(2) - log_var.exp()).view(N,curr_K).mean(dim = 0).view(1,-1))\n",
+    "        KL_gauss[KL_gauss != KL_gauss] = 0\n",
+    "        KL_gauss = KL_gauss.view(curr_K, 1)# curr_K x 1\n",
     "        \n",
     "        \n",
-    "        "
+    "        # KL Kumaraswamy \n",
+    "        a = self.softplus(self.beta_a[:curr_K,:]).view(curr_K,1)\n",
+    "        b = self.softplus(self.beta_b[:curr_K,:]).view(curr_K,1)\n",
+    "        euler_constant = -torch.digamma(torch.tensor(1.0))\n",
+    "        KL_kuma = ((a - self.alpha)/(a))*(-euler_constant -torch.digamma(b) - 1/b)\n",
+    "        KL_kuma += (a.log() + b.log()) + torch.log(torch.tensor(BETA(model.alpha,1)))\n",
+    "        KL_kuma -= (b - 1)/(b) \n",
+    "        KL_kuma[KL_kuma != KL_kuma] = 0 \n",
+    "        KL_kuma = KL_kuma.view(curr_K,1)  # curr_K x 1\n",
+    "        \n",
+    "        \n",
+    "        # KL Gumbel \n",
+    "        logit_pi = (pi+eps).log() - (1-pi+eps).log()\n",
+    "        logit_x  =  (z+eps).log() - (1 -z+eps).log()\n",
+    "        logit_gi = (alpha+eps).log() - (1-alpha+eps).log()\n",
+    "        \n",
+    "        tau = model.temperature[:curr_K,:].view(1,curr_K,1)\n",
+    "        tau_prior = model.t_prior\n",
+    "        \n",
+    "        exp_term_p = logit_pi - logit_x*(tau)\n",
+    "        exp_term_q = logit_gi - logit_x*(tau)\n",
+    "        log_tau = torch.log(torch.tensor(tau, requires_grad = False))\n",
+    "        log_taup = torch.log(torch.tensor(tau_prior, requires_grad = False))\n",
+    "        \n",
+    "        softplus = torch.nn.Softplus(threshold = 20)\n",
+    "        log_pz = log_tau + exp_term_p - 2.0*softplus(exp_term_p)\n",
+    "        log_qz = log_tau + exp_term_q - 2.0*softplus(exp_term_q)\n",
+    "        KL_gumb = (log_qz - log_pz)\n",
+    "        KL_gumb[KL_gumb != KL_gumb] = 0\n",
+    "        KL_gumb = KL_gumb.mean(dim =-1).mean(dim = 0).view(curr_K,1) # curr_K x 1\n",
+    "        \n",
+    "        KLs = [KL_gauss, KL_kuma, KL_gumb]\n",
+    "        \n",
+    "        \n",
+    "        return code, KLs\n",
+    "    \n",
+    "    \n",
+    "    def update_layer(self, in_features, out_features):\n",
+    "        \n",
+    "        if(out_features > self.out_features):\n",
+    "            k = out_features - self.out_features\n",
+    "            with torch.no_grad():\n",
+    "                self.beta_a = nn.Parameter(torch.cat((self.beta_a, torch.rand(k,1)*self.eps + self.softplus(self.alpha)), 0))\n",
+    "                self.beta_b = nn.Parameter(torch.cat((self.beta_b, torch.rand(k,1)*self.eps + self.softplus(self.beta)), 0))\n",
+    "                self.phi = nn.Parameter(torch.cat((self.phi, torch.randn((self.in_features + 1),k)), 1))\n",
+    "                self.weight = nn.Parameter(torch.cat((self.weight, torch.randn(k, self.in_features)), 0)*self.eps)\n",
+    "                self.weight_std = nn.Parameter(torch.cat((self.weight_std, torch.randn(k, self.in_features)), 0)*self.eps)\n",
+    "                self.bias = nn.Parameter(torch.cat((self.bias, torch.randn(k, 1)), 0)*self.eps)\n",
+    "                self.bias_std = nn.Parameter(torch.cat((self.bias_std, torch.randn(k, 1)), 0)*self.eps)\n",
+    "                self.bias_phi = nn.Parameter(torch.cat((self.bias_phi, torch.randn(k, 1)), 0)*self.eps)\n",
+    "                self.rhos = torch.cat((self.rhos, torch.zeros(k,1) + 0.5), 0)\n",
+    "                self.temperature = torch.cat((self.temperature, torch.zeros(k,1) + 10.0), 0)\n",
+    "            \n",
+    "        if(in_features > self.in_features):\n",
+    "            k = out_features - self.out_features\n",
+    "            with torch.no_grad():\n",
+    "                self.phi = nn.Parameter(torch.cat((self.phi, torch.randn(k,self.out_features)), 0))\n",
+    "                self.weight = nn.Parameter(torch.cat((self.weight, torch.randn(self.out_features, k)), 1)*self.eps)\n",
+    "                self.weight_std = nn.Parameter(torch.cat((self.weight_std, torch.randn(self.out_features, k)), 1)*self.eps)\n",
+    "    \n",
+    "    def constraint_proj(self):\n",
+    "        with torch.no_grad():\n",
+    "            self.beta_a[self.beta_a < 0.1] = 0.1\n",
+    "            self.beta_b[self.beta_b < 0.1] = 0.1\n",
+    "            self.rhos[self.rhos < 10e-6] = 10e-6\n",
+    "            self.rhos[self.rhos > 1 - 10e-6] = 1 - 10e-6\n",
+    "            pass"
    ]
   },
   {
