--- a/APIC_Net.ipynb
+++ b/APIC_Net.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,8 +257,8 @@
     "        in_features : initial_input_size\n",
     "        out_features : initial_output_size\n",
     "        '''\n",
-    "        self.alpha = alpha\n",
-    "        self.beta = beta\n",
+    "        self.alpha = torch.tensor(alpha)\n",
+    "        self.beta = torch.tensor(beta)\n",
     "        self.in_features = in_features\n",
     "        self.out_features = out_features\n",
     "        self.eps = 10e-10\n",
@@ -267,8 +267,8 @@
     "        self.fix_out = fix[1]\n",
     "        \n",
     "        # Lazy initialization of parameters\n",
-    "        self.weight = nn.Parameter(torch.randn(self.in_features, self.out_features)*self.eps)\n",
-    "        self.weight_std = nn.Parameter(torch.randn(self.in_features, self.out_features)*self.eps)\n",
+    "        self.weight = nn.Parameter(torch.randn(self.out_features, self.in_features)*self.eps)\n",
+    "        self.weight_std = nn.Parameter(torch.randn(self.out_features, self.in_features)*self.eps)\n",
     "        if bias:\n",
     "            self.bias = nn.Parameter(torch.randn(self.out_features, 1)*self.eps)\n",
     "            self.bias_std = nn.Parameter(torch.randn(self.out_features, 1)*self.eps)\n",
@@ -276,7 +276,6 @@
     "            self.bias = torch.randn(self.out_features, 1)*0\n",
     "            self.bias_std = torch.randn(self.out_features, 1)*0\n",
     "            \n",
-    "        self.reset_parameters()\n",
     "        \n",
     "        self.beta_a = nn.Parameter(torch.zeros(self.out_features, 1) \n",
     "                                 + self.inv_softplus(self.alpha) + \n",
@@ -293,7 +292,7 @@
     "        self.t_prior = 0.1 # prior temperature\n",
     "        \n",
     "        # RRS\n",
-    "        self.rhos = torch.zeros(latent_variable_dim + 1,1) + 0.5\n",
+    "        self.rhos = torch.zeros(self.out_features + 1,1) + 0.5\n",
     "        self.curr_out = self.out_features\n",
     "        \n",
     "        \n",
@@ -319,6 +318,7 @@
     "        if(k == 0):\n",
     "            k = self.curr_out\n",
     "        \n",
+    "        \n",
     "        mu = F.linear(x, self.weight[:k,:]) + self.bias[:k,:].view(-1,k) # N x k\n",
     "        log_var = F.linear(x, self.weight_std[:k,:]) + self.bias_std[:k,:].view(-1,k) # N x k\n",
     "        \n",
@@ -327,7 +327,7 @@
     "        eps = torch.rand_like(s)\n",
     "        a = eps.mul(s).add_(mu)\n",
     "        \n",
-    "        inter_z = torch.mm(x, self.phi[:,:k]) + self.phi_bias[:k,:].view(-1,k) # N x k\n",
+    "        inter_z = torch.mm(x, self.phi[:,:k]) + self.bias_phi[:k,:].view(-1,k) # N x k\n",
     "    \n",
     "        ################## Reparameterized gumbel kumaraswamy part........\n",
     "        G1 = torch.distributions.uniform.Uniform(self.eps, \n",
@@ -348,12 +348,13 @@
     "            p.append(p[t-1]*nu[t,:])\n",
     "        p = torch.cat(p,0)\n",
     "        \n",
-    "        pi = orch.distributions.bernoulli.Bernoulli(p).sample([N])\n",
+    "        pi = torch.distributions.bernoulli.Bernoulli(p).sample([N]).view(N,-1, sample_size)\n",
     "        logit_pi = ((pi + self.eps)/(1-pi + self.eps)).log()\n",
+    "        \n",
     "        logit_alpha = logit_pi + inter_z.view(N,k,1)\n",
     "        alpha = logit_alpha.sigmoid()\n",
     "        \n",
-    "        z1 = (logit_alpha + logit_G1)/self.temperature[:K,:].view(1,K,1)\n",
+    "        z1 = (logit_alpha + logit_G1)/self.temperature[:k,:].view(1,k,1)\n",
     "        z = z1.sigmoid()\n",
     "        \n",
     "        code = a*z # N x k   : this will the output of the network.....\n",
@@ -421,7 +422,8 @@
     "            with torch.no_grad():\n",
     "                self.beta_a = nn.Parameter(torch.cat((self.beta_a, torch.rand(k,1)*self.eps + self.softplus(self.alpha)), 0))\n",
     "                self.beta_b = nn.Parameter(torch.cat((self.beta_b, torch.rand(k,1)*self.eps + self.softplus(self.beta)), 0))\n",
-    "                self.phi = nn.Parameter(torch.cat((self.phi, torch.randn((self.in_features + 1),k)), 1))\n",
+    "\n",
+    "                self.phi = nn.Parameter(torch.cat((self.phi, torch.randn(self.in_features,k)), 1))\n",
     "                self.weight = nn.Parameter(torch.cat((self.weight, torch.randn(k, self.in_features)), 0)*self.eps)\n",
     "                self.weight_std = nn.Parameter(torch.cat((self.weight_std, torch.randn(k, self.in_features)), 0)*self.eps)\n",
     "                self.bias = nn.Parameter(torch.cat((self.bias, torch.randn(k, 1)), 0)*self.eps)\n",
@@ -429,13 +431,18 @@
     "                self.bias_phi = nn.Parameter(torch.cat((self.bias_phi, torch.randn(k, 1)), 0)*self.eps)\n",
     "                self.rhos = torch.cat((self.rhos, torch.zeros(k,1) + 0.5), 0)\n",
     "                self.temperature = torch.cat((self.temperature, torch.zeros(k,1) + 10.0), 0)\n",
+    "                \n",
+    "                self.out_features = out_features\n",
+    "                self.curr_out = out_features\n",
     "            \n",
     "        if(in_features > self.in_features):\n",
-    "            k = out_features - self.out_features\n",
+    "            k = in_features - self.in_features\n",
     "            with torch.no_grad():\n",
     "                self.phi = nn.Parameter(torch.cat((self.phi, torch.randn(k,self.out_features)), 0))\n",
     "                self.weight = nn.Parameter(torch.cat((self.weight, torch.randn(self.out_features, k)), 1)*self.eps)\n",
     "                self.weight_std = nn.Parameter(torch.cat((self.weight_std, torch.randn(self.out_features, k)), 1)*self.eps)\n",
+    "\n",
+    "                self.in_features = in_features\n",
     "    \n",
     "    def constraint_proj(self):\n",
     "        with torch.no_grad():\n",
@@ -445,6 +452,86 @@
     "            self.rhos[self.rhos > 1 - 10e-6] = 1 - 10e-6\n",
     "            pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/abhi/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:35: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = stochasticIBP(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 3, 1])"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model(torch.rand(5,2)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.update_layer(3,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 4, 1])"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model(torch.rand(5,3)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
