Added single sample based estimate model.

--- a/APIC_Net.ipynb
+++ b/APIC_Net.ipynb
@@ -942,27 +942,22 @@
     "        rgg = torch.zeros_like(layer.rhos)\n",
     "        for ck in samples:\n",
     "            ckp1 = ck + 1\n",
-    "            rho_grads = [torch.tensor([0])]\n",
-    "            ckp1 = len(rhos)\n",
-    "            rho_rr = list(layer.rhos)[:ckp1]\n",
+    "            rho_grads = [torch.tensor([0.0])]\n",
+    "            rho_rr = list(model.rhos)[:ckp1]\n",
     "            l_rr = l[1:ckp1]\n",
     "\n",
-    "\n",
     "            for k in range(1,ckp1):\n",
-    "\n",
-    "                grad = 0.0\n",
-    "\n",
-    "                if(k >= l.shape[0]):\n",
-    "                    rho_grads.append(rho_grads[0])\n",
-    "                    continue\n",
+    "                grad = torch.tensor([0.0])\n",
+    "                if(k > l_rr.shape[0]):\n",
+    "                    pass\n",
     "                else:\n",
     "                    for i in range(k-1, l_rr.shape[0]):\n",
     "                        wi = 0\n",
     "                        if(k-1 == i):\n",
-    "                            wi = 1/(rho_rr[k-1] - 1 -eps)\n",
+    "                            wi = 1/(rho_rr[k] - 1)\n",
     "                        else:\n",
-    "                            wi = 1/rho_rr[k-1]\n",
-    "\n",
+    "                            wi = 1/rho_rr[k]\n",
+    "                            \n",
     "                        grad += (1-rho_rr[i+1])*wi*l_rr[i]\n",
     "\n",
     "                rho_grads.append(grad)\n",
